[package]
authors = ["LinskRuis.32G <mgr9525@qq.com>"]
edition = "2018"
name = "hbtp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true
[dependencies]
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
qstring = {git="https://github.com/mgr9525/qstring.git", rev="1523f04f0e1b50e0b20239035a3027add2140497"}


async-std = {version="1", optional = true}
tokio = { version = "1", features = ["full"], optional = true }
ruisutil={git="https://github.com/mgr9525/rust-ruisutil.git", rev="3e89b43c1867d5c3914d28b89ab067d9f5b0496d",optional = true}
# ruisutil={path="../rust-ruisutil",optional = true}


[features]
default=["asyncs"]
asyncs=["async-std","ruisutil/asyncs"]
tokios=["tokio","ruisutil/tokios"]
